kanban-board/src/styles/InfoModal.css
.info-button {
  position: fixed;
  top: 10px;
  left: 10px;
  background-color: #007bff;
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
  color: white;
  border: none;
  border-radius: 4px;
  padding: 10px;
  cursor: pointer;
  font-size: 18px;
}

.info-button:hover {
  background-color: #0056b3;
}

.info-modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.info-modal-content {
  background-color: white;
  padding: 20px;
  border-radius: 8px;
  width: 300px;
  text-align: center;
}

.info-modal-header h2 {
  margin: 0;
}

.info-modal-body {
  padding: 15px;
  text-align: left;
}

.info-modal-message {
  margin-bottom: 10px;
  font-size: 16px;
}

.info-modal-message-number {
  font-weight: bold;
}

.info-modal-footer button {
    padding: 8px 16px;
    background-color: #007bff;
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
  }

